Changes since 0.3.1
===================
- Switched to utf-8 encoded strings internally and for config files.
  Language files can be either utf-8 or latin-1.

Changes since 0.3.0
===================

- The chat and console history are now remembered between restarts of arma
- Added an incremental reverse search for the console and chat history:
  In chat or console mode press CTRL-R and start entering your search term.
  It will show you the last found match in a new line, press right or left
  to jump to it in the history.
- New cockpit data sources current_name, current_colored_name,
  current_pos_x, current_pos_y and player_acceleration
- Growl notifications (http://growl.info) for Mac OS X when the server
  supports it. Messages sent: Player left, Player entered, Player renamed, 
  Death suicide, Death frag, Death teamkill, Game end, New Round, Round winner,
  Match winner, and New match. Note that not all notifications are enabled by
  default — you can toggle notifications and do many more things in the Growl
  System Preferences panel.
- Red/Green or Red/Cyan 3D rendering. Activate it by setting
  CAMERA_EYE_DISTANCE to something ≠ 0.

Changes since 0.3.0_alpha4941
=============================

- Added setting to toggle custom teamnames
- New team menu item: autoselect team mode
- New team menu item: join spectators
- Added name hilighting: If your name appears in someone else's chat
  message it gets hilighted in red
- Added new cockpit data sources: top_score_team and current_score_team
- The tab completion for names now uses the same mechanism as the /msg
  command: Nicks are simplified and latin-1 characters mapped to ASCII
  ones
- The /msg command now gets correctly recognized by the tab completion:
  Spaces in the name are now replaced by '_'
- The names that are displayed over other cycles now get colored in the
  same color as the cycle. Disable this by setting
  DISPLAY_COLORED_NAMES_OVER_CYCLES to 0.

Changes since 0.3.0_alpha4872