@@ -2,6 +2,8 @@ Changes since 0.3.1
 ===================
 - Switched to utf-8 encoded strings internally and for config files.
   Language files can be either utf-8 or latin-1.
+- New command: “TOGGLE”. Cycle between 0 and 1 for a boolean config item.
+  Example: Create an instant chat with the text “/console toggle predict_objects”.
 
 Changes since 0.3.0
 ===================
